# energy-sim

./: .gitignore  GEMINI.md  justfile  skills-lock.json
gateway/: .gitignore  go.mod  handler.go  handler_test.go  main.go  service.go  service_test.go  types.go
gateway/internal/simulation/: simulation_handler.go  simulation_handler_test.go  simulation_service.go  simulation_service_test.go  types.go  weather.go
gateway/internal/uldk/: api.go  api_test.go  get_parcel_by_xy.go  types.go
gateway/internal/weather/: openmeteo.go  openmeteo_test.go  provider.go
proto/: solar.proto
solver/: .gitignore  main.py  pyproject.toml
solver/solar_solver/: engine.py  service.py
solver/solar_solver/domain/: array.py  battery.py  context.py  inverter.py  inverter_library.py  location.py  panel.py  snow.py  system.py
solver/solar_solver/modifiers/: base.py  group.py  orientation.py  snow.py  temperature.py  wind.py
solver/solar_solver/parsers/: location.py  system.py  weather.py
solver/solver/: pyproject.toml
solver/tests/: test_engine.py  test_snow.py
tests/: battery_test.py  edge_cases_test.py  system_test.py
