[project]
name = "solar"
version = "0.1.0"
description = "High-fidelity solar energy simulation engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pvlib>=0.15.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "pytest>=9.0.3",
    "requests>=2.34.2",
    "pandas>=2.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=solar_solver --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["*/pb/*"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
